--- a/gb/23/12/31/n14147625.md
+++ b/gb/23/12/31/n14147625.md
@@ -24,17 +24,15 @@
 <p>&nbsp;</p>
 	
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/23/n14122274.md#1">世卫要求北京说明儿童肺炎激增详情</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/23/n14122504.md#1">多种病毒流行 世卫要求说明 中国怎么了？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/11/n14134360.md#1">报告：中共加强对维权人士家属的株连迫害</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/5/n14130100.md#1">中国个人债务危机潮到来 “老赖”人数激增</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/21/n14121397.md#1">每日更新：乐高乐园的中国元素 文化的旅程</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/21/n14141316.md#1">这些亚马逊好物 让你生活品质大提升</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/15/n14117110.md#1">UGG 男士雨衣61%折扣</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/12/n14135076.md#1">羊毛衫不缩水不掉色 这种洗衣液是关键</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/30/n14147191.md#1">IT经理：神韵让孩子学到很多信息</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/30/n14147208.md#1">神韵达拉斯首场爆满 观众盛赞：满载而归</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/30/n14147213.md#1">神韵演出精心策划 美不胜收 建筑承包商赞叹</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/30/n14147220.md#1">演出传达和平与善良 公司老板赞神韵很伟大</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/30/n14147224.md#1">国家机构部门主管：神韵带来众生的安宁</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/30/n14147229.md#1">首席财务官再观神韵 赞现场音乐鼓舞人心</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/11/2/n11629364.md#1" target="_blank">139号囚犯——红色影星赵丹的凄惨人生</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/20/3/12/n11936131.md#1" target="_blank">台湾中大教授：《转法轮》启发研究思路</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/5/1/n10353384.md#1" target="_blank">郑恩宠：中国打压 招安律师与林昭精神</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/1/22/n10993844.md#1" target="_blank">阅读《转法轮》 大洋洲法轮功学员谈感悟</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/8/n14132234.md#1">人身有多难得？聊斋中的轮回故事</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/20/n14119976.md#1">雨霖铃?李克强之死</a></li>
